--- a/wup_3.Rmd
+++ b/wup_3.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Alcohol vs Seat choice"
-author: "Your Name"
-date: "Fall 2020"
+author: "Karla Cota Lopez"
+date: "October 1,2024"
 output: html_document
 ---
 
@@ -23,6 +23,7 @@ davisdata <- read.csv(file="UCDavis.csv")
 basicCN <- ggplot(davisdata,aes(y=alcohol,x=Seat))
 ```
 ## Now add in boxplot
+
 
 ```{r}
 basicCN + geom_boxplot()
