--- a/wup_3.Rmd
+++ b/wup_3.Rmd
@@ -14,9 +14,19 @@ require(tidyverse)
 require(tigerstats)
 davisdata <- read.csv(file="UCDavis.csv")
 ```
-## Our Goal is to answer this question Is there a difference between the alcohol consumed between the row
-## you choose to sit in??
+## Our Goal is to answer this question 
+Is there a difference between the alcohol consumed between the row you choose to sit in??
 
+#Method
+predict alcohol consumption based on where you sit.
+
+$H_0$: There is no difference between the alcohol consumed between the row you choose to sit in
+
+$H_A$: There is a difference between the alcohol consumed between the row you choose to sit in
+
+alcohol is numerical
+seat is categorical
+Use file num~cat
 ## Now with ggplot - first select the basic data
 
 ```{r}
@@ -24,17 +34,19 @@ basicCN <- ggplot(davisdata,aes(y=alcohol,x=Seat))
 ```
 ## Now add in boxplot
 
-
 ```{r}
 basicCN + geom_boxplot()
 ```
   
+This boxplot shows us that those who choose to sit in the back tend to drink more alcohol.
   
 ### get fancy  
 
 ```{r}
 basicCN + geom_boxplot(notch=TRUE,outlier.color = "red") + stat_boxplot(geom ='errorbar') + labs(title="Fancy notch boxplot \n with 2 lines")
 ```
+
+Boxplot shows those who drink more alcohol sit in the back.
 
 ## Numerical Summarys 
 
